--- a/DeltaSYS/ViewController/public_html/principal.html
+++ b/DeltaSYS/ViewController/public_html/principal.html
@@ -27,7 +27,7 @@
               </tr>
               <tr>
                 <td>Contrase&ntilde;a<td>
-                <td><input type="text" id="password" name="password" /><td>
+                <td><input type="password" id="password" name="password" /><td>
               </tr>
               <tr>
                 <td align="center" ><input type="submit" value="Enviar" />
