--- a/DeltaSYS/ViewController/public_html/jsp/consulta/consulta.html
+++ b/DeltaSYS/ViewController/public_html/jsp/consulta/consulta.html
@@ -1,7 +1,97 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
-    <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=windows-1252"></meta>
-    </head>
-    <body></body>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf8"></meta>
+    <link rel="stylesheet" type="text/css" href="../../resources/css/style1.css">
+    
+    <script language="javascript" src="consulta.js"></script>
+        
+    <title>Consulta Ciudadana</title>
+  </head>
+  <body>
+    <div id="full">
+      <div id="head">
+        <h1>Sistema &Uacute;nico de Infracciones</h1>
+      </div> <!--end head-->
+      <div id="content">
+        <div id="consulta" class="consulta">       
+          <a href="">
+            <img class="imagen" src="../../resources/images/consulta.jpg"  alt="Consulta Ciudadana" />
+            </a>
+          <h3>Consulta Ciudadana</h3>
+        </div> <!--end consulta-->
+        <div id="search">
+            <div id="searchMatricula">
+              <form name="frmMatricula" method="post">
+                <table>
+                  <tr>
+                    <th>Matricula/Folio</th>
+                    <td><input type="text" id="matricula" name="matricula" onkeypress=""/></td>
+                    <td align="center" ><input type="button" value="Consultar Infracci&oacute;n" onclick=""/></td>
+                  </tr>
+                  <tr>
+                    <td colspan="3" colrow="2">Detalle de Infracciones</td>
+                  </tr>
+                </table>
+              </form>
+            </div>
+            <div id="folios">
+                <table cellspacing="0" cellpadding="10">
+                    <tr>
+                        <td valign="top" align="left" width="100">
+                            <table>
+                                <tr>
+                                    <th>Folio(s)</th>
+                                </tr>
+                                <tr>
+                                    <td valor="1121324" onclick="detalle(this);">1121324</td>
+                                </tr>
+                            </table>
+                        </td>
+                        <td>
+                            <table>
+                                <tr>
+                                    <td>Folio:</td>
+                                    <td><input  type="text" id="folio" name="folio" /></td>
+                                </tr>
+                                <tr>
+                                    <td>Situaci&oacute;n:</td>
+                                    <td><input  type="text" id="situacion" name="situacion" /></td>
+                                </tr>
+                                <tr>
+                                    <td>Fecha:</td>
+                                    <td><input  type="text" id="fecha" name="fecha" /></td>
+                                </tr>
+                                <tr>
+                                    <td>Matricula:</td>
+                                    <td><input  type="text" id="placa" name="placa" /></td>
+                                </tr>
+                                <tr>
+                                    <td>Motivo:</td>
+                                    <td><textarea rows="4" cols="40">
+                                    </textarea>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>Fundamento:</td>
+                                    <td><textarea rows="1" cols="40">
+                                    </textarea>
+                                    </td>
+                                </tr>
+                                 <tr>
+                                    <td>Sancion:</td>
+                                    <td><input  type="text" id="sancion" name="sancion" /></td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+          </div> <!--end search -->
+        </div> <!--end content-->
+      <div id="footer">
+        <h3>DeltaSys</h3>
+      </div> <!--end footer-->
+    </div> <!--end full-->
+  </body>
 </html>
