--- a/DeltaSYS/ViewController/public_html/principal.html
+++ b/DeltaSYS/ViewController/public_html/principal.html
@@ -12,15 +12,15 @@
     <script language="javascript" src="js/deltasys.js"></script>
     <script language="javascript" src="principal.js"></script>
     
-    <title>principal</title>
+    <title>SUI</title>
   </head>
   <body>
-    <div id="full">
+    <div id="full" >
       <div id="head">
         <h1>Sistema &Uacute;nico de Infraccciones</h1>
       </div> <!--end head-->
       <div id="content">
-        <div id="query">       
+        <div id="query" >       
           <a href=""><img src="resources/images/consulta.jpg"  alt="Consulta Ciudadana" /></a>
           <h3>Consulta Ciudadana</h3>
         </div><!--end query-->
@@ -46,7 +46,7 @@
           </form>
           </div> <!--end login-->
         </div> <!--end content-->
-      <div id="footer">
+      <div id="footer" >
         <h3>DeltaSys</h3>
       </div> <!--end footer-->
     </div> <!--end full-->
